# internal/delivery/http/response/user_response.go
@@ -8,20 +8,22 @@ import (
 )
 
 type ListUserResponse struct {
-	ID     uuid.UUID         `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`
-	Email  string            `json:"email" example:"rizalarfiyan@plant-factory.com"`
-	Name   string            `json:"name" example:"Rizal Arfiyan"`
-	Avatar string            `json:"avatar" example:"avatar: coding"`
-	Status entity.UserStatus `json:"status" example:"active"`
+	ID        uuid.UUID         `json:"id" example:"123e4567-e89b-12d3-a456-426614174000"`
+	Email     string            `json:"email" example:"rizalarfiyan@plant-factory.com"`
+	Name      string            `json:"name" example:"Rizal Arfiyan"`
+	Avatar    string            `json:"avatar" example:"avatar: coding"`
+	Status    entity.UserStatus `json:"status" example:"active"`
+	CreatedAt time.Time         `json:"created_at" example:"2024-01-01T00:00:00Z"`
 }
 
 func NewListUserResponse(u entity.User) ListUserResponse {
 	return ListUserResponse{
-		ID:     u.ID,
-		Email:  u.Email,
-		Name:   u.Name,
-		Avatar: u.Avatar,
-		Status: u.Status,
+		ID:        u.ID,
+		Email:     u.Email,
+		Name:      u.Name,
+		Avatar:    u.Avatar,
+		Status:    u.Status,
+		CreatedAt: u.CreatedAt,
 	}
 }
 
