# internal/domain/entity/general.go
@@ -2,7 +2,7 @@ package entity
 
 type PaginationResult struct {
 	Page       uint64
-	Limit      uint64
+	PageSize   uint64
 	Total      uint64
 	TotalPages uint64
 }
